syntax = "proto3";

package shortener.v1;

import "google/api/annotations.proto";

option go_package = "github.com/palashb01/url-shortener/gen/go/proto/shortener/v1;shortenerv1";

service ShortenerService {
  rpc Shorten(ShortenRequest) returns (ShortenResponse) {
    option (google.api.http) = {
      post: "/v1/shorten"
      body: "*"
    };
  }

  rpc Resolve(ResolveRequest) returns (ResolveResponse) {
    option (google.api.http) = {
      get: "/v1/resolve/{short_code}"
    };
  }
}

message ShortenRequest {
  string original_url = 1;
}

message ShortenResponse {
  string short_url = 1;
}

message ResolveRequest {
  string short_code = 1;
}

message ResolveResponse {
  string original_url = 1;
}
